added tab for source pointing to github repo

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -47,6 +47,7 @@
                     <li><a href="../config">FCMA File</a>
                    	<li class="active"><a href="../cluster">Cluster</a></li>
                    	<li><a href="../demo">Demo</a></li>
+			<li><a href="http://github.com/PrincetonUniversity/fcma-toolbox">Source</a></li>
                 </ul>
             </div>
         </div>
