--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#using">FCMA Toolbox</a>
+            <a class="brand" href=".">FCMA Toolbox</a>
             <div class="nav-collapse">
                 <ul class="nav">
                     <li class="active"><a href="#using">Using</a></li>
                     <li><a href="config">FCMA File</a>
 		    		<li><a href="cluster">Cluster</a></li>
 		    		<li><a href="demo">Demo</a></li>
+		    		<li><a href="http://github.com/PrincetonUniversity/fcma-toolbox">Source</a></li>
                 </ul>
             </div>
         </div>
