--- a/config/index.html
+++ b/config/index.html
@@ -69,6 +69,7 @@ else if (window.attachEvent) // Microsoft
                     <li class="active"><a href="../config">FCMA File</a>
                    	<li><a href="../cluster">Cluster</a></li>
                    	<li><a href="../demo">Demo</a></li>
+			<li><a href="http://github.com/PrincetonUniversity/fcma-toolbox">Source</a></li>
                 </ul>
             </div>
         </div>
