--- a/demo/index.html
+++ b/demo/index.html
@@ -53,6 +53,7 @@
                     <li><a href="../config">FCMA File</a>
                   	<li><a href="../cluster">Cluster</a></li>
                    	<li class="active"><a href="../demo">Demo</a></li>
+			<li><a href="http://github.com/PrincetonUniversity/fcma-toolbox">Source</a></li>
                 </ul>
             </div>
         </div>
