updated info on repo

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -58,7 +58,7 @@
     <blockquote>
 	<h2>FCMA Cluster Setup</h2>
 	<p>Coming soon!</p><br>
-	<p>If you have rondo access, the source code for the main executable as well as support scripts is available on github: <a href="http://github.com/PrincetonUniversity/fcma-toolbox">fcma-toolbox</a>.</p>
+	<p>The source code for the main executable as well as support scripts is available on github: <a href="http://github.com/PrincetonUniversity/fcma-toolbox">fcma-toolbox</a>.</p>
 	</blockquote>
 </div>
 </body>
