updates to source area

--- a/config/index.html
+++ b/config/index.html
@@ -69,7 +69,7 @@ else if (window.attachEvent) // Microsoft
                     <li class="active"><a href="../config">FCMA File</a>
                    	<li><a href="../cluster">Cluster</a></li>
                    	<li><a href="../demo">Demo</a></li>
-			<li><a href="../cluster">Source</a></li>
+			<li><a href="../source">Source</a></li>
                 </ul>
             </div>
         </div>
