update -- says cluster setup not source code

--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
 <div class="container">
     <div class="page-header">
     <blockquote>
-	<h2>FCMA Cluster Setup</h2>
+	<h2>FCMA Source Code</h2>
 	<p>Coming soon!</p><br>
 	<p>The source code for the main executable as well as support scripts will be available on github here: <a href="http://github.com/PrincetonUniversity/fcma-toolbox">fcma-toolbox</a>.</p> Currently access requires a github.com account belonging to Princeton's FCMA Toolbox Team.
 	</blockquote>
