update for dual fcma templates, fix some html bugs and added internet explorer 8+ compatability

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -55,8 +55,9 @@
 </div>
 <div class="container">
     <div class="page-header">
+		<h2>FCMA Cluster Setup</h2>
+	</div>
     <blockquote>
-	<h2>FCMA Cluster Setup</h2>
 	<p>Coming soon!</p><br>
 	<p>The source code for the main executable as well as support scripts is available on github: <a href="http://github.com/PrincetonUniversity/fcma-toolbox">fcma-toolbox</a>.</p>
 	</blockquote>
