--- a/demo/index.html
+++ b/demo/index.html
@@ -61,17 +61,17 @@
 </div>
 <div class="container">
     <div class="page-header">
+		<h2>Demonstration</h2>
+	</div>
     <blockquote>
-<h2>Demonstration</h2>
-	<p>An early preview follows, extremely limited in its scope and in resources that can be devoted to it at this time, but which will be rapidly evolving in the coming months.
-<br>Please upload four (4) files:
-<ul>
-<li><b>Data</b>: an <i>anonymized</i> 3D + time FMRI volume in NiFTI <b>.nii.gz</b> format</li>
-<li><b>Mask</b>: a 3D binary spatial mask, same space dimensions as data (<b>.nii.gz</b> format)</li>
-<li><b>FCMA File</b>: an .fcma file generated via the command line or via the <a href="../config">FCMA File Generator</a>.</li>
-<li><b>Blockfile</b>: a .txt file containing a description of experiment trials; see the <a href="../config#reference">FCMA paramater reference</a> for the format.</li>
-<br>
-<p>Your files will be uploaded and analyzed on a small cluster of computers (currently 8 max). The files are automatically deleted after the analysis ends, but they can be deleted manually from the list below at any time.<br>
+		<br>Please upload four (4) files:
+		<ul>
+			<li><b>Data</b>: an <i>anonymized</i> 3D + time FMRI volume in NiFTI <b>.nii.gz</b> format</li>
+			<li><b>Mask</b>: a 3D binary spatial mask, same space dimensions as data (<b>.nii.gz</b> format)</li>
+			<li><b>FCMA File</b>: an .fcma file generated via the command line or via the <a href="../config">FCMA File Generator</a>.</li>
+			<li><b>Blockfile</b>: a .txt file containing a description of experiment trials; see the <a href="../config#reference">FCMA paramater reference</a> for the format.</li>
+		</ul>
+		<p>Your files will be uploaded and analyzed on a small cluster of computers (currently 8 max). The files are automatically deleted after the analysis ends, but they can be deleted manually from the list below at any time.<br>
     </blockquote>
     <br>
         <p>The demonstration is currently off-line.</p><br>
