added acknowledgements page

--- a/cluster/index.html
+++ b/cluster/index.html
@@ -48,6 +48,7 @@
                    	<li class="active"><a href="../cluster">Cluster</a></li>
                    	<li><a href="../demo">Demo</a></li>
 			<li><a href="../source">Source</a></li>
+			<li><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
         </div>
