--- a/config/index.html
+++ b/config/index.html
@@ -69,6 +69,7 @@ else if (window.attachEvent) // Microsoft
 						<li><a href="../cluster">Cluster</a></li>
 						<li><a href="../demo">Demo</a></li>
 						<li><a href="../source">Source</a></li>
+						<li><a href="../thanks">Thanks</a></li>
 					</ul>
 				</div>
 			</div>
