--- a/thanks/index.html
+++ b/thanks/index.html
@@ -43,25 +43,28 @@
             <a class="brand" href="..">FCMA Toolbox</a>
             <div class="nav-collapse">
                 <ul class="nav">
-			<li><a href="../#using">Using</a></li>
-			<li><a href="../config">FCMA File</a>
-			<li><a href="../cluster">Cluster</a></li>
+                    <li><a href="../#using">Using</a></li>
+                    <li><a href="../config">FCMA File</a>
+                   	<a href="../cluster">Cluster</a></li>
                    	<li><a href="../demo">Demo</a></li>
-			<li class="active"><a href="../source">Source</a></li>
-                   	<li><a href="../thanks">Thanks</a></li>
+			<li><a href="../source">Source</a></li>
+			<li><li class="active"><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
-	</div>
+        </div>
     </div>
 </div>
 <div class="container">
     <div class="page-header">
-		<h2>FCMA Source Code</h2>
+		<h2>Acknowledgements</h2>
 	</div>
     <blockquote>
-		<p>Coming soon!</p><br>
-		<p>The source code for the main executable as well as support scripts will be available on github here: <a href="http://github.com/PrincetonUniversity/fcma-toolbox">fcma-toolbox</a>.</p> Currently access requires a github.com account belonging to Princeton's FCMA Toolbox Team.
-	</blockquote>
+	<p>The development of the FCMA Toolbox at the PNI would not be possible without help from these organizations:</p>
+	<br>
+	<img src="Intel_Labs.png" alt="Intel Labs logo" width=320 height=320>
+	<img src="fusionio-logo.png" alt="FusionIO logo" width=320 height=320>
+	<img src="nsf-logo.jpg" alt="NSF logo" width=320 height=320>
+    </blockquote>
 </div>
 </body>
 </html>
