--- a/demo/index.html
+++ b/demo/index.html
@@ -54,6 +54,7 @@
                   	<li><a href="../cluster">Cluster</a></li>
                    	<li class="active"><a href="../demo">Demo</a></li>
 			<li><a href="../source">Source</a></li>
+			<li><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
         </div>
