--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 						<li><a href="cluster">Cluster</a></li>
 						<li><a href="demo">Demo</a></li>
 						<li><a href="source">Source</a></li>
+						<li><a href="thanks">Thanks</a></li>
 					</ul>
 				</div>
 			</div>
