--- a/thanks/index.html
+++ b/thanks/index.html
@@ -45,10 +45,10 @@
                 <ul class="nav">
                     <li><a href="../#using">Using</a></li>
                     <li><a href="../config">FCMA File</a>
-                   	<a href="../cluster">Cluster</a></li>
-                   	<li><a href="../demo">Demo</a></li>
-			<li><a href="../source">Source</a></li>
-			<li><li class="active"><a href="../thanks">Thanks</a></li>
+                    <li><a href="../cluster">Cluster</a></li>
+                    <li><a href="../demo">Demo</a></li>
+		    <li><a href="../source">Source</a></li>
+		    <li class="active"><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
         </div>
