--- a/thanks/index.html
+++ b/thanks/index.html
@@ -44,7 +44,7 @@
             <div class="nav-collapse">
                 <ul class="nav">
                     <li><a href="../#using">Using</a></li>
-                    <li><a href="../config">FCMA File</a>
+                    <li><a href="../config">FCMA File</a></li>
                     <li><a href="../cluster">Cluster</a></li>
                     <li><a href="../demo">Demo</a></li>
 		    <li><a href="../source">Source</a></li>
