--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 			<a name="notes"></a>
 			<h3>Notes</h3>
 			<ul>
+				<li>This project is a collaboration between the <a href="http://www.pni.princeton.edu/">Princeton Neuroscience Institute</a> (including faculty from Psychology and Computer Science) with funding from the <a href="http://nsf.gov">National Science Foundation</a>, and with donation of vital computing equipment including Xeon Phi and Xeon Sandybridge processors from <a href="http://intel.com">Intel</a>
 				<li>Code by <a href="http://www.cs.princeton.edu/~yidawang/">Yida Wang</a> and <a href="http://princeton.edu/~bdsinger/">Ben Singer</a>, as part of research being carried out at the <a href="http://www.pni.princeton.edu/">Princeton Neuroscience Institute</a> in the <a href="http://www.princeton.edu/ntblab/">Turk-Browne</a>, <a href="http://www.cs.princeton.edu/~li/">Li</a>, and <a href="http://www.pni.princeton.edu/ncc/">Cohen</a> labs.</li>
+				<li>Some background on the computational challenge of this project are provided by web pages that predate this one: <a href="http://qed.princeton.edu/main/The_Correlation_Project/Pyne_Fund_Proposal">Pyne Fund</a> proposal from 2010, and <a href="http://fullcorr.wikidot.com">fullcorr wiki</a>
 			</ul>
 		</div>
 		<br>
@@ -130,8 +132,9 @@
 			<a name="refs"></a>
 			<h3>References</h3>
 			<ul>
-				<li></li>
-			</ul>
+				<li>Wang, Y., Li, K., Cohen, J. D., & Turk-Browne, N. B. (under revision). <strong>What you see depends upon how you look: Category-selective interactions with frontal cortex during object perception</strong></li>
+				<li>Wang, Y., Li, K., Charikar, M., Cohen, J. D., & Turk-Browne, N. B. (May, 2013). <a href="http://www.journalofvision.org/content/13/9/493.short">What you find depends on how you look: Category selectivity in frontal cortex revealed by whole-brain correlation analysis.</a>. Poster presented at Vision Sciences Society, Naples, FL.</li>
+				<li>Turk-Browne, N. B., Li, K., Charikar, M., Cohen, J. D., & Singer, B.D. (2010). <a href="http://qed.princeton.edu/main/The_Correlation_Project/Pyne_Fund_Proposal">Computing and Mining the Full Correlation Matrix of Human Brain Imaging (fMRI) Datasets</a>. J. Insley Blair Pyne Fund Proposal (funded)
 		</div>
 		<br>
 		<div class="well">
