updated source link now that repo is public

--- a/demo/index.html
+++ b/demo/index.html
@@ -53,8 +53,8 @@
                     <li><a href="../config">FCMA File</a>
                   	<li><a href="../cluster">Cluster</a></li>
                    	<li class="active"><a href="../demo">Demo</a></li>
-			<li><a href="../source">Source</a></li>
-			<li><a href="../thanks">Thanks</a></li>
+										<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
+										<li><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
         </div>
