--- a/config/index.html
+++ b/config/index.html
@@ -68,7 +68,7 @@ else if (window.attachEvent) // Microsoft
 						<li class="active"><a href="../config">FCMA File</a>
 						<li><a href="../cluster">Cluster</a></li>
 						<li><a href="../demo">Demo</a></li>
-						<li><a href="../source">Source</a></li>
+						<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
 						<li><a href="../thanks">Thanks</a></li>
 					</ul>
 				</div>
