--- a/thanks/index.html
+++ b/thanks/index.html
@@ -47,8 +47,8 @@
                     <li><a href="../config">FCMA File</a></li>
                     <li><a href="../cluster">Cluster</a></li>
                     <li><a href="../demo">Demo</a></li>
-		    <li><a href="../source">Source</a></li>
-		    <li class="active"><a href="../thanks">Thanks</a></li>
+		   							<li><a href="http://github.com/princetonuniversity/fcma-toolbox">Source</a></li>
+		    						<li class="active"><a href="../thanks">Thanks</a></li>
                 </ul>
             </div>
         </div>
